# BDSL

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/butter/: Cargo.toml  build.rs
crates/butter/assets/: design_tokens.json
crates/butter/src/: lib.rs  main.rs  plugins.rs  prelude.rs  widget.rs
crates/butter/src/plugins/: asset_management.rs  bevy.rs  canvas.rs  computed_size.rs  debug.rs  design_tokens.rs  error_handler.rs  file_watcher.rs  input.rs  inspector.rs  rng.rs  schedule.rs  startup.rs  ui.rs  window.rs
crates/butter/src/plugins/canvas/: affordance.rs  breadboard.rs  connection.rs  place.rs  shared.rs
crates/butter/src/plugins/input/: camera.rs
crates/butter/src/plugins/ui/: navbar.rs  widget.rs
crates/butter/src/plugins/ui/widget/: label.rs  navbar.rs
crates/converters/json/: Cargo.toml
crates/converters/json/src/: lib.rs
crates/converters/json/src/snapshots/: bnb_converter_json__tests__serialize_deserialize.snap
crates/dtoken/: Cargo.toml  README.md
crates/dtoken/src/: bevy.rs  build.rs  builder.rs  error.rs  gen.rs  lib.rs  parser.rs  types.rs
crates/dtoken/src/parser/: group.rs  token.rs  types.rs
crates/dtoken/src/snapshots/: dtoken__build__tests__case 1.snap  dtoken__build__tests__examples.snap  dtoken__build__tests__json case 0.snap  dtoken__build__tests__merged content.snap  dtoken__build__tests__private fields.snap  dtoken__tests__examples.snap
crates/dtoken/src/types/: alias.rs  border.rs  color.rs  cubic_bezier.rs  dimension.rs  duration.rs  font_family.rs  font_weight.rs  gradient.rs  number.rs  shadow.rs  stroke_style.rs  transition.rs  typography.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/src/snapshots/: bnb_parser__tests__parse_comment-2.snap  bnb_parser__tests__parse_comment-3.snap  bnb_parser__tests__parse_comment-4.snap  bnb_parser__tests__parse_comment-5.snap  bnb_parser__tests__parse_comment-6.snap  bnb_parser__tests__parse_comment-7.snap  bnb_parser__tests__parse_comment.snap  bnb_parser__tests__parse_level-2.snap  bnb_parser__tests__parse_level-3.snap  bnb_parser__tests__parse_level-4.snap  bnb_parser__tests__parse_level-5.snap  bnb_parser__tests__parse_level.snap  bnb_parser__tests__snapshots-2.snap  bnb_parser__tests__snapshots-3.snap  bnb_parser__tests__snapshots.snap
language-grammars/vim/: bnb.vim
