[workspace]
members = [
  "crates/ast",
  "crates/butter",
  "crates/converters/json",
  "crates/dtoken",
  "crates/parser",
]
exclude = ["crates/converters/mermaidjs"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dcdpr/BDSL"

[workspace.lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
unused = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
assigning_clones = "allow"
ignored_unit_patterns = "allow"
format_push_string = "allow"
type_complexity = "allow"

[patch.crates-io]
bevy_ui = { git = "https://github.com/jeanmertz/bevy", branch = "jean/debug-ui-gizmo-size" }
bevy_color = { git = "https://github.com/jeanmertz/bevy", branch = "jean/debug-ui-gizmo-size" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
