[package]
name = "bnb-butter"
version = "0.1.0"
description = "A Buttery Smooth Breadboarding UI."
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace dependencies.
ast = { package = "bnb-ast", path = "../ast", default-features = false }
dtoken = { path = "../dtoken", default-features = false }
parser = { package = "bnb-parser", path = "../parser", default-features = false }

# Core Bevy crates.
bevy_a11y = { version = "0.13", default-features = false }
bevy_app = { version = "0.13", default-features = false }
bevy_asset = { version = "0.13", default-features = false }
bevy_core = { version = "0.13", default-features = false }
bevy_core_pipeline = { version = "0.13", default-features = false }
bevy_derive = { version = "0.13", default-features = false }
bevy_ecs = { version = "0.13", default-features = false }
bevy_hierarchy = { version = "0.13", default-features = false }
bevy_input = { version = "0.13", default-features = false }
bevy_math = { version = "0.13", default-features = false }
bevy_reflect = { version = "0.13", default-features = false }
bevy_render = { version = "0.13", default-features = false, features = ["png"] }
bevy_sprite = { version = "0.13", default-features = false }
bevy_text = { version = "0.13", default-features = false }
bevy_time = { version = "0.13", default-features = false }
bevy_transform = { version = "0.13", default-features = false }
bevy_utils = { version = "0.13", default-features = false }
bevy_window = { version = "0.13", default-features = false }
bevy_winit = { version = "0.13", default-features = false }

# Dynamic linking, see: <https://bevyengine.org/learn/book/getting-started/setup/#enable-fast-compiles-optional>.
bevy_dylib = { version = "0.13", default-features = false, optional = true }
bevy_internal = { version = "0.13", default-features = false, optional = true }

# Other crates.
bevy_egui = { version = "0.25", default-features = false, features = [
  "default_fonts",
] }
# TODO: Swap for version 0.23 once new release is out.
bevy-inspector-egui = { git = "https://github.com/Aztro-dev/bevy-inspector-egui", default-features = false, features = [
  "highlight_changes",
], optional = true }
bevy_turborand = { version = "0.8", default-features = false, features = [
  "wyrand",
] }
dirs = { version = "5", default-features = false }
rfd = { version = "0.13", default-features = false, features = ["gtk3"] }
tracing = { version = "0.1", default-features = false, features = [
  "attributes",
] }
tracing-subscriber = { version = "0.3", default-features = false, optional = true, features = [
  "fmt",
  "ansi",
  "env-filter",
  "json",
] }

[build-dependencies]
dtoken = { path = "../dtoken", default-features = false, features = [
  "build",
  "rustfmt",
] }

[features]
default = ["fast-compile"]
fast-compile = ["dep:bevy_dylib", "bevy_internal/dynamic_linking"]
trace = ["dep:tracing-subscriber"]
inspector = ["dep:bevy-inspector-egui"]
