[package]
name = "dtoken"
version = "0.1.0"
description = "Design Tokens for Rust"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
convert_case = { version = "0.6", default-features = false, optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", default-features = false, optional = true }
tinyjson = "2"

[features]
default = ["build", "rustfmt"]
build = ["dep:convert_case", "dep:proc-macro2", "dep:quote"]
rustfmt = []

[dev-dependencies]
indoc = { version = "2", default-features = false }
insta = { version = "1", default-features = false, features = ["colors"] }
prettyplease = { version = "0.2", default-features = false }
similar-asserts = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing"] }
