[package]
name = "dtoken"
version = "0.1.0"
description = "Design Tokens for Rust"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
unused = { level = "warn", priority = -1 } # See: <https://github.com/rust-lang/rust-clippy/pull/12827>

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"                 # TODO
cast_lossless = "allow"
cast_possible_truncation = "allow"
doc_markdown = "allow"
too_many_lines = "allow"                     # TODO

[dependencies]
convert_case = { version = "0.6", default-features = false, optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", default-features = false, optional = true }
tinyjson = "2"

bevy_ui = { version = "0.15", default-features = false, optional = true }
bevy_color = { version = "0.15", default-features = false, optional = true }

[features]
default = ["build", "rustfmt"]
bevy = ["dep:bevy_ui", "dep:bevy_color"]
build = ["dep:convert_case", "dep:proc-macro2", "dep:quote"]
rustfmt = []

[dev-dependencies]
indoc = { version = "2", default-features = false }
insta = { version = "1", default-features = false, features = ["colors"] }
prettyplease = { version = "0.2", default-features = false }
similar-asserts = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing"] }
