[package]
name = "bnb-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bnb-ast = { path = "../ast" }
thiserror = { version = "1", default-features = false }

[dev-dependencies]
indoc = { version = "2", default-features = false }
insta = { version = "1", default-features = false, features = ["colors"] }
