[package]
name = "bnb-converter-json"
version = "0.1.0"
edition = "2021"

[dependencies]
bnb-ast = { path = "../../ast" }
serde_json = { version = "1", default-features = false, features = ["std"] }

[dev-dependencies]
insta = { version = "1", default-features = false, features = [
  "colors",
  "json",
] }
